--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.4",
+    "react-joyride": "^2.9.3",
+    "react-simple-typewriter": "^5.0.1",
     "sonner": "^2.0.3",
     "stripe": "^18.2.1",
     "tailwind-merge": "^3.3.0",
